Fix overflow for mobile resolutions

--- a/src/sass/pages/damage/damage-results.scss
+++ b/src/sass/pages/damage/damage-results.scss
@@ -1,4 +1,6 @@
+@use '../../abstracts' as abstracts;
+
 .damage-results-pane {
-  // flex: 1 1 150px;
   flex: 1 1 0;
+  min-width: abstracts.$min-width;
 }
